# OpenSDL

./: .air.schedule.toml  .air.web.toml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  firmware_status.md  go.mod  go.sum  main.go
cmd/api/: server.go
cmd/schedule/: server.go
crates/osdl-cli/: Cargo.toml
crates/osdl-cli/examples/: bus_manifest_live.rs  chinwe_scan.rs  drain_funnel_nudge_more.rs  drain_funnel_via_espnow.rs  emm_motor_nudge_via_espnow.rs  emm_motor_roundtrip_via_espnow.rs  emm_motors_probe_via_espnow.rs  espnow_probe.rs  laiyu_scan.rs  runze_three_pumps_via_espnow.rs  runze_via_espnow.rs  stir_10s.rs
crates/osdl-cli/src/: client.rs  main.rs
crates/osdl-cli/src/commands/: device.rs  events.rs  mod.rs  send.rs  serve.rs  status.rs  stop.rs
crates/osdl-core/: Cargo.toml
crates/osdl-core/examples/: media_gateway.rs  move_chinwe.rs  move_laiyu.rs  test_chinwe.rs  test_laiyu.rs
crates/osdl-core/src/: broker.rs  config.rs  engine.rs  event.rs  lib.rs  mdns.rs  mqtt.rs  orchestrator.rs  path_expand.rs  protocol.rs  store.rs
crates/osdl-core/src/adapter/: mod.rs  runze.rs  unilabos.rs
crates/osdl-core/src/driver/: mod.rs  registry.rs
crates/osdl-core/src/driver/builtins/: emm.rs  laiyu_xyz.rs  mod.rs  runze.rs  sopa.rs  xkc.rs
crates/osdl-core/src/driver/util/: mod.rs  modbus_rtu.rs
crates/osdl-core/src/media/: mediamtx.rs  mod.rs  onvif_camera.rs
crates/osdl-core/src/transport/: direct_serial.rs  espnow_dongle.rs  espnow_gateway.rs  mod.rs  mqtt_serial.rs  tcp.rs
crates/osdl-core/tests/: e2e_mqtt.rs  integration.rs
crates/osdl-firmware-protocol/: Cargo.toml
crates/osdl-firmware-protocol/src/: espnow.rs  lib.rs  reg.rs
crates/osdl-proto/: Cargo.toml  build.rs
crates/osdl-proto/proto/: osdl.proto
crates/osdl-proto/src/: lib.rs
crates/osdl-server/: Cargo.toml
crates/osdl-server/src/: auth.rs  convert.rs  lib.rs  lockfile.rs  paths.rs  service.rs
docker/: .env.dev  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.infra.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  MIGRATION_FROM_UNILAB.md  MIGRATION_FROM_UNILAB_CN.md  README_CN.md  TESTING_GUIDE_CN.md  architecture.md  cs-architecture.md  docs.go  getting-started.md  known-issues.md  swagger.json  swagger.yaml
docs/recipes/: README.md  bus-manifest.md  chinwe-station.md  drain-funnel.md  emm-motor-roundtrip.md  media-gateway.md  runze-single-pump.md  stir-10s.md
docs/recipes/configs/: cameras-jzt31.yaml  chinwe-station.yaml  laiyu-xyz-station.yaml  onvif-camera.yaml  two-stations.yaml
firmware/esp32/: Cargo.toml  README.md  platformio.ini
firmware/esp32-cpp/: platformio.ini
firmware/esp32-max485/: Cargo.toml  README.md  sdkconfig.defaults
firmware/esp32-rs/: .gitignore  Cargo.toml  README.md
firmware/esp32-rs/scripts/: send_1zr.py
firmware/esp32-rs/src/: main.rs
firmware/esp32/src/: config.example.h  main.cpp
firmware/esp32s3/: Cargo.toml  README.md
firmware/esp32s3/src/: config.example.rs  main.rs
internal/config/: config.go  env.go
launch/: colors.sh  dev.sh
pkg/common/: response.go
pkg/common/code/: code.go  code_string.go
pkg/common/constant/: constant.go
pkg/core/login/: model.go
pkg/core/login/casdoor/: casdoor.go
pkg/core/material/: material.go  model.go
pkg/core/material/material/: edge.go  material.go
pkg/core/notify/: notify.go
pkg/core/notify/events/: events.go
pkg/core/schedule/: model.go  schedule.go
pkg/core/schedule/control/: control.go
pkg/core/schedule/engine/: engine.go  model.go
pkg/core/schedule/lab/: lab.go  model.go
pkg/grpc/: interceptor.go  server.go
pkg/grpc/services/: auth.go  edge.go  material.go  schedule.go
pkg/middleware/auth/: auth.go  middleware.go
pkg/middleware/db/: db.go  init.go
pkg/middleware/logger/: ginlogger.go  shortcut.go
pkg/middleware/redis/: redis.go
pkg/repo/: account.go  base.go  environment.go  material.go  sandbox.go
pkg/repo/bohr/: bohrium.go
pkg/repo/casdoor/: casdoor.go
pkg/repo/environment/: env.go
pkg/repo/material/: material.go
pkg/repo/migrate/: migrate.go
pkg/repo/model/: base.go  environment.go  lab.go  material.go  workflow.go
pkg/repo/sandbox/: sandbox.go
pkg/utils/: jwt.go  lab.go  slice.go
pkg/web/: router.go  schedule.go
pkg/web/views/health/: health.go
pkg/web/views/login/: login.go
pkg/web/views/material/: material.go
pkg/web/views/schedule/: schedule.go
pkg/web/views/sse/: sse.go
registry/unilabos/: chinwe_station.yaml  heater_stirrer.yaml  laiyu_xyz_pipette.yaml  runze_syringe_pump.yaml
scripts/: probe_dongle.py  probe_gateway.py  probe_new_child_rs485.py  probe_node_rs485.py  rs485_direct_probe.py  send_to_new_child.py  send_to_node.py
service/: go.mod  go.sum  main.go
service/cmd/api/: migrate.go  server.go
service/cmd/schedule/: schedule.go
service/docs/: docs.go
service/internal/config/: config.go  dynamic.go  env.go
service/pkg/common/: response.go  role.go
service/pkg/common/code/: code_string.go  errCode.go
service/pkg/common/constant/: constant.go
service/pkg/common/uuid/: uuid.go
service/pkg/core/environment/: environment.go  model.go
service/pkg/core/inner/: inner.go  model.go
service/pkg/core/login/: model.go
service/pkg/core/material/: material.go  model.go
service/pkg/core/mcp/: mcp.go  model.go
service/pkg/core/notebook/: model.go  notebook.go
service/pkg/core/notify/: notify.go
service/pkg/core/reagent/: model.go  reagent.go
service/pkg/core/schedule/: schedule.go
service/pkg/model/: base.go  environment.go  flociety.go  lab.go  machine.go  material.go  notebook.go  policy.go  pose.go  reagent.go  sample.go  storage_token.go  workflow.go
service/pkg/repo/: account.go  base.go  environment.go  invite.go  machine.go  material.go  mcp.go  notebook.go  policy.go  pubchem.go  reagent.go  storage_token.go  tags.go  workflow.go
service/pkg/utils/: concurrent.go  dag.go  file.go  jwt.go  lab.go  signal.go  slice.go
service/pkg/web/: router.go  schedule.go
(+82 files in other folders)
