[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
rumqttd = { version = "0.20", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
log = "0.4"
thiserror = "2"
