[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
rumqttc = "0.24"
rumqttd = { version = "0.20", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
async-trait = "0.1"
mdns-sd = "0.13"
log = "0.4"
thiserror = "2"
tokio-serial = "5.4"
env_logger = "0.11"
tempfile = "3"
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "router", "server", "channel"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
hyper-util = { version = "0.1", features = ["tokio"] }
tower = { version = "0.5", features = ["util"] }
daemonize = "0.5"
shellexpand = "3"
