[package]
name = "osdl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for OpenSDL — platform-agnostic lab hardware control via MQTT"

[features]
default = []
serial = ["dep:tokio-serial"]
espnow = ["dep:tokio-serial"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
rumqttc.workspace = true
rumqttd.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
mdns-sd.workspace = true
log.workspace = true
thiserror.workspace = true
tokio-serial = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true
