[package]
name = "osdl-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC server library wrapping the OpenSDL engine"

[dependencies]
osdl-core = { path = "../osdl-core" }
osdl-proto = { path = "../osdl-proto" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"
async-trait = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
espnow = ["osdl-core/espnow"]
