# Firmware crate for boards built around a standard ESP32-D0WD (Tensilica
# LX6) — currently always paired with an external MAX485 RS-485 transceiver,
# but new ESP32 board variants can be added as additional bins under
# `src/bin/`. Kept separate from `firmware/esp32s3` because esp-idf-template
# / embuild / esp-idf-sys expect one Cargo project per Xtensa MCU target.
[workspace]

[package]
name = "osdl-esp32-firmware"
version = "0.1.0"
authors = ["xinquiry <100398322+xinquiry@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "node"
path = "src/bin/node.rs"
harness = false

[[bin]]
name = "node-tcan485"
path = "src/bin/node-tcan485.rs"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
# Pure-Rust no_std codec shared with the mother (`crates/osdl-core`) and the
# S3 firmware. Linked by path; not a workspace member of either side.
osdl-firmware-protocol = { path = "../../crates/osdl-firmware-protocol" }

[build-dependencies]
embuild = "0.33"
